Added the logic for Hit and Deal buttons

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="main-container">
         <h3><span id="blackjack-result">Let's play</span></h3>
         <div class="flex-blackjack-row-1">
-            <div class="your-box">
+            <div id="your-box">
                 <h2>You: <span id="your-score">0</span></h2>
             </div>
-            <div class="dealer-box">
-                <h2>Dealer: <span id="dealer-result">0</span></h2>
+            <div id="dealer-box">
+                <h2>Dealer: <span id="dealer-score">0</span></h2>
             </div>
         </div>
         <div class="flex-blackjack-row-2">
@@ -37,6 +37,6 @@
             </table>
         </div>
     </div>
-    
+    <script src="./index.js"></script>
 </body>
 </html>
