Added the score keeping logic and a sparkly background

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="main-container">
-        <h3><span id="blackjack-result">Let's play</span></h3>
+        <h3><span id="blackjack-result">Welcome to Ale's Blackjack</span></h3>
         <div class="flex-blackjack-row-1">
             <div id="your-box">
                 <h2>You: <span id="your-score">0</span></h2>
